<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:layout_margin="@dimen/margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/margin"
                android:text="@string/white_balance_mode" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/margin"
                android:text="@string/color_mode" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/margin"
                android:text="@string/exposure_mode" />

            <TextView
                android:id="@+id/ex_com_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/margin"
                android:text="@string/exposure_compensation"
                android:visibility="gone" />

            <TextView
                android:id="@+id/iso_val"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/margin"
                android:text="@string/iso_value"
                android:visibility="gone" />



            <TextView
                android:id="@+id/shutter_speed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/margin"
                android:text="@string/shutter_speed"
                android:visibility="gone" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <Spinner
                android:id="@+id/wb_dropdown"
                android:layout_width="wrap_content"
                android:layout_height="52dp"></Spinner>

            <Spinner
                android:id="@+id/color_mode_dropdown"
                android:layout_width="wrap_content"
                android:layout_height="52dp"></Spinner>

            <Spinner
                android:id="@+id/exposure_mode_dropdown"
                android:layout_width="wrap_content"
                android:layout_height="52dp"></Spinner>

            <Spinner
                android:id="@+id/exposure_com_dropdown"
                android:layout_width="wrap_content"
                android:layout_height="56dp"
                android:visibility="gone"></Spinner>

            <Spinner
                android:id="@+id/iso_dropdown"
                android:layout_width="wrap_content"
                android:layout_height="52dp"
                android:visibility="gone"></Spinner>

            <Spinner
                android:id="@+id/shutter_speed_dropdown"
                android:layout_width="wrap_content"
                android:layout_height="52dp"
                android:visibility="gone"></Spinner>

        </LinearLayout>

    </LinearLayout>


</LinearLayout>
